feat: Implement bean validation using Spring Boot Validator
- Add spring-boot-starter-validation dependency to pom.xml
- Apply bean validation annotations to UserDto fields for data validation
- Utilize @Valid annotation in UserController to trigger validation of UserDto inputs

This commit introduces bean validation using Spring Boot Validator, ensuring that data provided by clients via the UserDto is validated before processing. Validations include checking for non-empty fields, valid email format, and password constraints.

Additionally, with this commit, the USER API implementation is completed.

--- a/blog-app-apis/pom.xml
+++ b/blog-app-apis/pom.xml
@@ -1,18 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>3.2.3</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.absara1am.blog</groupId>
 	<artifactId>blog-app-apis</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>blog-app-apis</name>
-	<description>An advanced backend API system tailored for a dynamic and scalable blogging platform. This application specializes in delivering robust and efficient backend services essential for powering a modern blogging ecosystem. From user authentication to content management, comment moderation, and beyond, it provides a comprehensive suite of functionalities meticulously crafted to elevate the user experience and ensure seamless operation of the blogging platform.</description>
+	<description>An advanced backend API system tailored for a dynamic and
+		scalable blogging platform. This application specializes in delivering
+		robust and efficient backend services essential for powering a modern
+		blogging ecosystem. From user authentication to content management,
+		comment moderation, and beyond, it provides a comprehensive suite of
+		functionalities meticulously crafted to elevate the user experience and
+		ensure seamless operation of the blogging platform.</description>
 	<properties>
 		<java.version>21</java.version>
 	</properties>
@@ -42,7 +49,7 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
-		
+
 		<!-- https://mvnrepository.com/artifact/org.modelmapper/modelmapper -->
 		<dependency>
 			<groupId>org.modelmapper</groupId>
@@ -50,7 +57,15 @@
 			<version>3.2.0</version>
 		</dependency>
 
-		
+		<!--
+		https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+
+		</dependency>
+
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
